force-app/main/default/objects/npe5__Affiliation__c/fields/Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Application_Link__c</fullName>
    <formula>Application__r.Application_Form_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Link</label>
    <type>Text</type>
</CustomField>