force-app/main/default/objects/npe5__Affiliation__c/fields/Burst_SMS_Email__c.field-meta.xml
<CustomField>
    <fullName>Burst_SMS_Email__c</fullName>
    <formula>npe5__Contact__r.Burst_SMS_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Burst SMS Email</label>
    <type>Text</type>
</CustomField>