force-app/main/default/objects/npe5__Affiliation__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort</label>
    <referenceTo>Application_Round__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>