force-app/main/default/objects/npe5__Affiliation__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <formula>npe5__Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>