force-app/main/default/objects/npe5__Affiliation__c/fields/FLP_Application__c.field-meta.xml
<CustomField>
    <fullName>FLP_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FLP Application</label>
    <referenceTo>FLP_Application__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>