force-app/main/default/objects/npe5__Affiliation__c/fields/Incoming_Associate_Record__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Associate_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incoming Associate Record</label>
    <referenceTo>Associate_Record__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>