force-app/main/default/objects/npe5__Affiliation__c/fields/Is_Alumni__c.field-meta.xml
<CustomField>
    <fullName>Is_Alumni__c</fullName>
    <formula>npe5__Contact__r.Alumni__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Alumni</label>
    <type>Checkbox</type>
</CustomField>