force-app/main/default/objects/npe5__Affiliation__c/fields/remediatedData__c.field-meta.xml
<CustomField>
    <fullName>remediatedData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>remediated Data</label>
    <type>Checkbox</type>
</CustomField>