force-app/main/default/objects/npe5__Affiliation__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <formula>npe5__Contact__r.ReportsTo.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager</label>
    <type>Text</type>
</CustomField>