force-app/main/default/objects/npe5__Affiliation__c/fields/Role_Category__c.field-meta.xml
<CustomField>
    <fullName>Role_Category__c</fullName>
    <label>Role Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Executive &amp; Senior Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>