force-app/main/default/objects/npe5__Affiliation__c/validationRules/Start_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>npe5__StartDate__c == null</errorConditionFormula>
    <errorDisplayField>npe5__StartDate__c</errorDisplayField>
    <errorMessage>Start Date is Required</errorMessage>
</ValidationRule>