force-app/main/default/objects/npe5__Affiliation__c/listViews/Affiliation_List_Email.listView-meta.xml
<ListView>
    <fullName>Affiliation_List_Email</fullName>
    <columns>NAME</columns>
    <columns>npe5__Contact__c</columns>
    <columns>npe5__Organization__c</columns>
    <columns>Email__c</columns>
    <columns>Role_Category__c</columns>
    <columns>npe5__Status__c</columns>
    <columns>npe5__StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npe5__Contact__c</field>
        <operation>equals</operation>
        <value>john smith</value>
    </filters>
    <label>Affiliation List Email</label>
</ListView>